--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^0.22.0",
     "http": "^0.0.0",
     "iconv-lite": "^0.4.16",
-    "mongodb": "^3.1.0"
-  }
+    "mongodb": "^2.2.31"
+  },
+  "devDependencies": {}
 }
